<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".SignUp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Role"
        android:textColor="#6d81a5"
        android:textSize="15sp" />

    // component used from https://github.com/jaredrummler/MaterialSpinner
    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/RoleInput"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="10dp" />

    //component used from https://github.com/rengwuxian/MaterialEditText
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/UsernameInput"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorWhite"
        android:hint="Username"
        android:textSize="15sp"
        app:met_baseColor="@android:color/white"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorWhite"
        app:met_singleLineEllipsis="true"
        android:textCursorDrawable="@color/colorWhite"/>

    //component used from https://github.com/rengwuxian/MaterialEditText
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/PasswordInput"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/customborder"
        android:hint="Password"
        android:textSize="15sp"
        app:met_baseColor="@android:color/white"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorWhite"
        app:met_singleLineEllipsis="true"
        android:inputType="textPassword"
        android:textCursorDrawable="@color/colorWhite"/>

    //component used from https://github.com/rengwuxian/MaterialEditText
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/FirstNameInput"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/customborder"
        android:hint="First Name"
        android:textSize="15sp"
        app:met_baseColor="@android:color/white"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorWhite"
        app:met_singleLineEllipsis="true"
        android:textCursorDrawable="@color/colorWhite"/>

    //component used from https://github.com/rengwuxian/MaterialEditText
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/LastNameInput"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/customborder"
        android:hint="Last Name"
        android:textSize="15sp"
        app:met_baseColor="@android:color/white"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorWhite"
        app:met_singleLineEllipsis="true"
        android:textCursorDrawable="@color/colorWhite"/>

    <Button
        android:id="@+id/SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickSignUp"
        android:text="@string/signup"
        android:theme="@style/AppTheme.Button" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>